<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.evince.useroperations.models.UserModel" />

        <variable
            name="model"
            type="UserModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.user_details.UserDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:background="@color/grey_200"
                app:imageUrl="@{model.avatar}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/Circle"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/btnDownload"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_downlaod"
                app:layout_constraintBottom_toBottomOf="@id/ivPic"
                app:layout_constraintStart_toEndOf="@id/ivPic"
                app:layout_constraintTop_toTopOf="@id/ivPic" />

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:text="@{model.firstName}"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@id/tvEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPic"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@tools:sample/full_names" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:text="@{model.lastName}"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toTopOf="@id/tvEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFirstName"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@tools:sample/full_names" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@{model.email}"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLastName"
                tools:text="@tools:sample/full_names" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDelete"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="35dp"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnUpdate" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>